--- a/http/pom.xml
+++ b/http/pom.xml
@@ -36,12 +36,31 @@
 		<version>2.6</version>
 		<scope>compile</scope>
 	</dependency>
+	
 	<dependency>
 		<!-- jsoup HTML parser library @ http://jsoup.org/ -->
 	  	<groupId>org.jsoup</groupId>
 	  	<artifactId>jsoup</artifactId>
 	  	<version>1.7.2</version>
+	  	<scope>test</scope>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>javax.xml.bind</groupId>
+		<artifactId>jaxb-api</artifactId>
+		<version>2.2.1</version>
+	</dependency>
+
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.xml.bind</groupId>
+		<artifactId>jsr173_api</artifactId>
+		<version>1.0</version>
+	</dependency>
   </dependencies>
+  
 </project>
