Signed-off-by: elrasco <luca.rasconi@gmail.com>

--- a/http/pom.xml
+++ b/http/pom.xml
@@ -61,6 +61,11 @@
 		<artifactId>jsr173_api</artifactId>
 		<version>1.0</version>
 	</dependency>
+	<dependency>
+	<groupId>org.codehaus.jackson</groupId>
+	<artifactId>jackson-jaxrs</artifactId>
+	<version>1.9.12</version>
+</dependency>
   </dependencies>
   
 </project>
