--- a/http/pom.xml
+++ b/http/pom.xml
@@ -66,6 +66,11 @@
 	<artifactId>jackson-jaxrs</artifactId>
 	<version>1.9.12</version>
 </dependency>
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.7</version>
+	</dependency>
   </dependencies>
   
 </project>
