Signed-off-by: elrasco <luca.rasconi@gmail.com>

--- a/http/pom.xml
+++ b/http/pom.xml
@@ -13,8 +13,19 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <repositories>
+    <repository>
+      <id>oss-sonatype-snapshots</id>
+      <name>OSS Sonatype Snapshots Repository</name>
+	  <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>false</releases>
+      <snapshots>true</snapshots>
+    </repository>
+  </repositories> 
 
   <dependencies>
+     
     
     <dependency>
       <groupId>junit</groupId>
